most-of-the-labs/finished/DevOps-Materials/Terraform/4 - Resources/4.2/networking.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    "Name"       = "06-resources-vpc"
    "managed_by" = "Terraform"
    "project"    = "06-resources"
  }
}

resource "aws_subnet" "public" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.0.0/24"
  availability_zone = "eu-west-1a"

  tags = {
    "Name"       = "06-resources-public-subnet"
    "managed_by" = "Terraform"
    "project"    = "06-resources"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    "Name"       = "06-resources-igw"
    "managed_by" = "Terraform"
    "project"    = "06-resources"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block      = "0.0.0.0/0"
    gateway_id      = aws_internet_gateway.main.id
  }

  tags = {
    "Name"       = "06-resources-public-rt"
    "managed_by" = "Terraform"
    "project"    = "06-resources"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
